more correct html and js

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class="row">
             <h1>Histogram</h1>
         </div>
-        <div class="row spacing" />
+        <div class="row spacing"></div>
         <div class="row">
             <div class="col-md-4">
                 <p>Please enter input data in the field below.</p>
-                <input id="numbers" value="0, 2, 14, 6, 8"></input>
+                <input id="numbers" value="0, 2, 14, 6, 8"/>
                 <p>
                     <small>Note, that currently an empty value after a ',' is parsed as a 0.</small>
                 </p>
@@ -28,9 +28,9 @@
         </div>
     </div>
 
-    <script src="//d3js.org/d3.v3.min.js"></script>
-    <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="histogram.js"></script>
+<script src="//d3js.org/d3.v3.min.js"></script>
+<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="histogram.js"></script>
 </body>
 
 </html>
